Fix. Logos are not rendering on SDK home page and nested pages (light and dark mode)

--- a/packages/@okta/vuepress-theme-prose/assets/css/base/_typography.scss
+++ b/packages/@okta/vuepress-theme-prose/assets/css/base/_typography.scss
@@ -16,6 +16,14 @@
   font-display: swap;
 }
 
+@font-face {
+  font-weight: 400;
+  font-style: normal;
+  font-family: "okticon";
+  src: url("/fonts/okticon.eot");
+  src: url("/fonts/okticon.eot?#iefix") format("embedded-opentype"), url("/fonts/okticon.woff") format("woff"), url("/fonts/okticon.ttf") format("truetype"), url("/fonts/okticon.svg#okticon") format("svg");
+}
+
 a {
   text-decoration: none;
   color: cv("link");
